# jsinterop-generator

./: BUILD  BUILD.jscomp  BUILD.oss  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  bazel_build_test.sh  build_test_samples.sh  copy.bara.sky  deploy.sh  jscomp.BUILD  jsinterop_generator.bzl  jsinterop_generator_import.bzl  license.txt  oss_version.txt  pom-closure-generator.xml  release_jsinterop_generator.sh  workspace_defs.bzl
.bcr/: metadata.template.json  presubmit.yml
.github/workflows/: release.yaml  release_prep.sh
build_defs/: repository.bzl  rules.bzl
build_defs/internal_do_not_use/: jsinterop_generator_workspace.bzl
internal_do_not_use/: BUILD  README.md  create_generated_srcjar.sh  format_srcjar.sh  generator_node_entrypoint.js  validate_opensource_env.sh
java/jsinterop/generator/closure/: BUILD  BuiltInClosureTypeCleaner.java  ClosureJsInteropGenerator.java  GeneratorFailedException.java  IObjectIArrayLikeCleaner.java  JarFileCreator.java  JavaFile.java  Options.java  Runner.java
java/jsinterop/generator/closure/helper/: AbstractNoOpVisitor.java  BUILD  ClosureTypeRegistry.java  GenerationContext.java
java/jsinterop/generator/closure/visitor/: AbstractClosureVisitor.java  AnonymousTypeCollector.java  BUILD  EnumMemberCollector.java  InheritanceVisitor.java  MemberCollector.java  ThisTemplateTypeVisitor.java  TypeCollector.java  TypeParameterCollector.java
java/jsinterop/generator/global/: BUILD  Console.java  Global.java
java/jsinterop/generator/helper/: AbortError.java  AbstractTypeRegistry.java  BUILD  GeneratorUtils.java  ModelHelper.java  Problems.java
java/jsinterop/generator/model/: AbstractStatement.java  AbstractTypeReference.java  AccessModifier.java  Annotation.java  AnnotationType.java  ArrayTypeReference.java  BUILD  CastExpression.java  ClassDecomposition.java  DelegableTypeReference.java  Entity.java  EntityKind.java  Expression.java  ExpressionStatement.java  Field.java  HasName.java  HasTypeParameters.java  InstanceOfExpression.java  JavaTypeReference.java  LiteralExpression.java  Method.java  MethodInvocation.java  ModelVisitor.java  Node.java  Parameter.java  ParametrizedTypeReference.java  PredefinedTypeReference.java  PredefinedTypes.java  Program.java  ReturnStatement.java  Statement.java  Type.java  TypeQualifier.java  TypeReference.java  TypeVariableReference.java  UnionTypeReference.java  Visitable.java  WildcardTypeReference.java
java/jsinterop/generator/option/: BUILD  GeneratorOptions.java
java/jsinterop/generator/visitor/: AbstractJsOverlayMethodCreator.java  AbstractModelVisitor.java  BUILD  ClosureOptionalParameterCleaner.java  ConstantRewriter.java  ConstructorVisitor.java  DependencyFileWriter.java  DictionaryTypeVisitor.java  DuplicatedTypesUnifier.java  EmptyNamespaceFilter.java  FieldsConverter.java  FixReferencesToDuplicatedTypes.java  FixTypeParametersOfReferencesToSyntheticTypes.java  FixTypeParametersOfSyntheticTypes.java  FunctionalInterfaceAnnotator.java  IntegerEntitiesConverter.java  JavaArrayParameterJsOverlayCreator.java  JsArrayLikeParameterJsOverlayCreator.java  JsConstructorFnParameterJsOverlayCreator.java  JsConstructorFnParameterVisitor.java  JsOverlayMethodsCleaner.java  MembersClassCleaner.java  ModelVisitor.java  NamespaceAttributeRewriter.java  ObjectParameterJsOverlayCreator.java  OptionalParameterHandler.java  ParametrizedObjectReferenceRewriter.java  ResolveVarargsAmbiguity.java  TypeReferenceUtils.java  UnionTypeHelperTypeCreator.java  UnionTypeMethodParameterHandler.java  ValidJavaIdentifierVisitor.java  VisitorHelper.java  WildcardTypeCreator.java
java/jsinterop/generator/writer/: AnnotationWriter.java  BUILD  CodeWriter.java  FieldWriter.java  MethodWriter.java  TypeWriter.java
javatests/jsinterop/generator/: BUILD  es6_min.js  gen_jsinterop_golden.py  jsinterop_generator_test.bzl  jsinterop_generator_test.sh
javatests/jsinterop/generator/closure/: BUILD  TestUtil.java
javatests/jsinterop/generator/externs/bigint/: BUILD  Foo.java.txt  bigint.js
javatests/jsinterop/generator/externs/dependency/: BUILD  MyLibGlobal.java  MyLibGlobal__Constants.java  MyLibThirdPartyClass.java  MyLibThirdPartyClass.java.txt  SimpleClass.java.txt  SimpleInterface.java.txt  dependency.js
javatests/jsinterop/generator/externs/dictionarytype/: BUILD  DictionaryType.java  SimpleDictionaryType.java  dictionarytype.js
javatests/jsinterop/generator/externs/entitiesrenaming/: BUILD  Foo.java  Foo.java.txt  Global.java  Global.java.txt  SimpleInterface.java  SimpleInterface.java.txt  entitiesrenaming.js  renaming.txt
javatests/jsinterop/generator/externs/enums/: BUILD  Bar.java  Bar.java.txt  Bar__Constants.java  Baz.java.txt  Foo.java  Foo.java.txt  Foo__Constants.java  enums.js
javatests/jsinterop/generator/externs/functionalinterface/: BUILD  InterfaceWithOneMethod.java.txt  InterfaceWithTwoMethods.java.txt  StructuralInterface.java.txt  functionalinterface.js
javatests/jsinterop/generator/externs/functiontype/: AliasedFunctionType.java.txt  BUILD  Global.java  Global.java.txt  SimpleClass.java  SimpleInterface.java  SimpleInterface.java.txt  SimpleModule.java  SimpleModule.java.txt  functiontype.js
javatests/jsinterop/generator/externs/generics/: AnonymousTypes.java  AnonymousTypes.java.txt  BUILD  Bar.java  Bar.java.txt  BarChild.java.txt  ExtendInterfaceWithGeneric.java  ExtendInterfaceWithGeneric.java.txt  InterfaceWithGeneric.java.txt  RecordWithGeneric.java.txt  SimpleClass.java  SimpleClass.java.txt  SimpleClassChild.java.txt  SimpleInterface.java.txt  generics.js
javatests/jsinterop/generator/externs/globalscope/: BUILD  Global.java  Global.java.txt  Global__Constants.java  globalscope.js
javatests/jsinterop/generator/externs/inheritance/: Array.java  BUILD  GreatParentClass.java  GreatParentClass.java.txt  GreatParentInterface.java  GreatParentInterface.java.txt  InterfaceWithStructuralType.java  (+10 more)
kokoro/: bazel_build.sh  common.cfg  continuous.cfg
maven/: pom-closure-generator.xml  release_jsinterop_generator.sh
sample/: BUILD  MODULE.bazel  simpleclass.js
(+114 files in other folders)
