module(
    name = "com_google_jsinterop_generator",
    bazel_compatibility = [">=7.4.1"],
)

bazel_dep(name = "com_google_j2cl")

archive_override(
    module_name = "com_google_j2cl",
    strip_prefix = "j2cl-master",
    urls = ["https://github.com/google/j2cl/archive/master.zip"],
)

bazel_dep(name = "com_google_jsinterop_base")

archive_override(
    module_name = "com_google_jsinterop_base",
    strip_prefix = "jsinterop-base-master",
    urls = ["https://github.com/google/jsinterop-base/archive/master.zip"],
)

bazel_dep(
    name = "rules_license",
    version = "1.0.0",
)

bazel_dep(
    name = "rules_shell",
    version = "0.4.1",
)

bazel_dep(
    name = "bazel_skylib",
    version = "1.7.1",
)

bazel_dep(
    name = "rules_java",
    version = "8.6.1",
)

bazel_dep(
    name = "rules_jvm_external",
    version = "6.6",
)

bazel_dep(
    name = "google_bazel_common",
    version = "0.0.1",
)

bazel_dep(
    name = "io_bazel_rules_closure",
)

# rules_closure is not available in BCR.
git_override(
    module_name = "io_bazel_rules_closure",
    commit = "39aefd7a0a355e8b93c85bf275f3c119454e6830",
    remote = "https://github.com/bazelbuild/rules_closure",
)

# rules_webtesting is not available in BCR.
git_override(
    module_name = "rules_webtesting",
    commit = "7a1c88f61e35ee5ce0892ae24e2aa2a3106cbfed",
    remote = "https://github.com/bazelbuild/rules_webtesting",
)

# rules_scala is not available in BCR.
# The root module has to declare the same override as rules_webtesting.
git_override(
    module_name = "rules_scala",
    commit = "219e63983e8e483e66ebf70372969ba227382001",
    remote = "https://github.com/mbland/rules_scala",
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

maven.install(
    artifacts = [
        "args4j:args4j:2.33",
    ],
)

maven.artifact(
    artifact = "closure-compiler",
    group = "com.google.javascript",
    version = "v20240317",
)

use_repo(maven, "maven")

# Works around https://github.com/bazelbuild/rules_python/issues/1169
bazel_dep(
    name = "rules_python",
    version = "0.23.1",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = False,
    ignore_root_user_error = True,
    python_version = "3.11",
)

