module(name = "sample")

bazel_dep(name = "jsinterop_generator")

# Use the repository's version of jsinterop_generator.
local_path_override(
    module_name = "jsinterop_generator",
    path = "../",
)

# TODO: drop this once jsinterop_base is in BCR.
bazel_dep(name = "jsinterop_base", repo_name = "com_google_jsinterop_base")
archive_override(
    module_name = "jsinterop_base",
    strip_prefix = "jsinterop-base-master",
    urls = ["https://github.com/google/jsinterop-base/archive/master.zip"],
)
